src/styles.css
/* ===================================
   EVERYTHING
   =================================== */
* {
    font-family: var(--default-font);
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    user-select: none;
}

:root {
    --default-font: 'JetBrains Mono', monospace;

    --main-blue-color: #2563EB;
    --main-blue-hover: #4d7fec;
    --left-panel-background: #F9FDFE;
    --left-panel-hover: #dde2e4;
    --right-panel-background: #ECECEC;

    --font-color-main: ;
    --font-color-secondary: #F8FAFC;

    --priority-high: red;
    --priority-med: yellow;
    --priority-low: green;
}

button,
.menu-choice span {
    cursor: pointer;
}

/* ===================================
   WRAPPER
   =================================== */
.wrapper {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100vh;
}

/* ===================================
   DIALOGS (TODO & PROJECT)
   =================================== */
dialog {
    padding: 20px;
    border: solid 1px rgb(110, 110, 110);
}

dialog::backdrop {
    backdrop-filter: blur(3px);
}

fieldset {
    border: none;
    padding-bottom: 10px;
}

.dialog-header {
    display: flex;
    justify-content: space-between;
    padding-bottom: 10px;
}

.dialog-close {
    cursor: pointer;
}

/* ===================================
   PANEL CONTAINER
   =================================== */
.panel-container {
    display: flex;
    flex: 1 0 auto;
}

/* ===================================
   LEFT-PANEL CONTAINER
   =================================== */
.left-panel {
    min-width: 27vw; /* this is absolutely not the way to handle the width of the left panel */
    padding: 10px;
    box-shadow: 4px 0px 6px rgba(0, 0, 0, 0.1);
    position: relative;
    z-index: 1;
    background-color: var(--left-panel-background);
}

.title {
    padding-bottom: 15px;
}

.left-section {
    margin-bottom: 15px;
    display: flex;
    flex-direction: column;
}

.menu-choice,
.menu-title {
    padding: 5px 0px;
}

.project-menu .menu-choice {
    display: flex;
    justify-content: space-between;
}

/* ===================================
   RIGHT-PANEL CONTAINER
   =================================== */
.right-panel {
    min-width: 73vw; /* this is absolutely not the way to handle the width of the right panel*/
    background-color: var(--right-panel-background);
}

/* NO EXISTING TODOS */
.empty-todo-container {
    color: #999999;
    text-align: center;
    margin: 20px;
}

span.default-text {
    color: var(--main-blue-color);
}

/* ADD TODO BUTTON */
button#add-task-button {
    font-size: 40px;
    color: var(--right-panel-background);
    padding: 5px;
    width: 80px;
    height: 80px;
    border: none;
    border-radius: 100px;
    background-color: var(--main-blue-color);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
    transition: all 0.1s ease;
    position: fixed;
    right: 20px;
    bottom: 20px;
}

button#add-task-button:hover {
    background-color: var(--main-blue-hover)
}

button#add-task-button:active {
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.8);
    transform: translateY(2px)
}

/* ===================================
   TO DO ITEMS
   =================================== */
.todo-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.todo-item .text-container,
.todo-item .info-container,
.todo-item .info-bottom-container {
    gap: 3px;
}

.todo-item {
    width: 95%;
    margin: 10px;
    padding: 8px;
    display: grid;
    grid-template-columns: 1fr 13fr 6fr;
    gap: 8px;
    border-radius: 7px;
    background-color: var(--left-panel-background);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
}

.todo-item:hover {
    background-color: var(--left-panel-hover);
    cursor: pointer;
}

.todo-item .status-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.todo-item .text-container {
    display: grid;
    grid-template-rows: 1fr 2fr;
}

.todo-item .todo-title-container {
    font-weight: bold;
    font-size: 1.1em;
}

.todo-item .todo-detail-container {
    color: #494949d7;
    font-size: 0.9em;
}

.todo-item .info-container {
    display: grid;
    grid-template-rows: 1fr 1fr;
}

.todo-item .info-top-container,
.todo-item .info-bottom-container {
    display: flex;
    justify-content: space-evenly;
}

.todo-delete-button {
    align-self: flex-right;
}

.todo-priority-high-3 {
    background-color: var(--priority-high);
}

.todo-priority-medium-2 {
    background-color: var(--priority-med);
}

.todo-priority-low-1 {
    background-color: var(--priority-low);
}

